# libwebsockets

./: .gitignore  Android.mk  CMakeLists.txt  build-android.sh
lib/: lws_config_private.h
lib/plat/: lws-plat-unix.c
